name:                pot
version:             0.1.0.0
author:              Tran Ma
maintainer:          tran@defma.in
build-type:          Simple
cabal-version:       >=1.10

executable pot
  main-is:             Client.hs
  other-modules:       Op,
                       Sync       

  build-depends:       base >=4.7 && <4.8,
                       pipes,
                       threepenny-gui

  default-language:    Haskell2010
