name:                pot
version:             0.1.0.0
author:              Tran Ma
maintainer:          tran@defma.in
build-type:          Simple
cabal-version:       >=1.10

executable pot-server
  main-is:             Server.hs
  other-modules:       Op

  build-depends:       base >=4.7 && <4.8,
                       containers,
                       mtl,
                       stm,
                       aeson,
                       bytestring,
                       pipes,
                       pipes-concurrency,
                       network

  default-language:    Haskell2010

executable pot-client
  main-is:             Client.hs
  other-modules:       Op

  build-depends:       base >=4.7 && <4.8,
                       containers,
                       mtl,
                       mvc,
                       aeson,
                       lens,
                       bytestring,
                       pipes,
                       pipes-aeson,
                       QuickCheck,
                       network,
                       websockets 

  default-language:    Haskell2010
